--- a/preview/index.html
+++ b/preview/index.html
@@ -6,6 +6,15 @@
     <script src="tensor-arena.js"></script>
 </head>
 <body>
-
+    <style>
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            font-size: 0;
+            white-space: normal;
+            text-align: center;
+        }
+    </style>
 </body>
 </html>
