add thread workers. add ThreadedTensorComponent. add worker compiling to webpack.

--- a/preview/index.html
+++ b/preview/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tensor Arena</title>
-    <script src="tensor-arena.js"></script>
+    <script src="TensorArena.js"></script>
 </head>
 <body>
     <style>
