--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Tensor Arena</title>
     <link rel="icon" type="image/png" href="favicon.png"/>
-    <script src="tensor-arena.js"></script>
+    <script src="TensorArena.js"></script>
     <style>
         html, body {
             width: 100%;
